--- a/index.css
+++ b/index.css
@@ -102,3 +102,24 @@ li {
   color: #ef6b68;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 1280px) {
+  header {
+    margin: 0 200px 0;
+  }
+
+  main {
+    margin: 0 200px 0;
+  }
+
+  @media only screen and (max-width: 769px) {
+    header {
+      margin: 0;
+    }
+
+    main {
+      height: 100vh;
+      margin: 0;
+    }
+  }
+}
