--- a/index.css
+++ b/index.css
@@ -112,6 +112,12 @@ li {
     margin: 0 200px 0;
   }
 
+  .container {
+    width: 300px;
+    margin: auto;
+    text-align: center;
+  }
+
   @media only screen and (max-width: 769px) {
     header {
       margin: 0;
